feat: get anime list
