# docs/swagger.yaml
@@ -273,6 +273,119 @@ info:
   description: Akatsuki API.
   title: Akatsuki API
 paths:
+  /anime:
+    get:
+      parameters:
+      - description: title
+        in: query
+        name: title
+        type: string
+      - description: nsfw
+        enum:
+        - "true"
+        - "false"
+        in: query
+        name: nsfw
+        type: string
+      - description: type
+        enum:
+        - TV
+        - OVA
+        - ONA
+        - MOVIE
+        - SPECIAL
+        - MUSIC
+        in: query
+        name: type
+        type: string
+      - description: status
+        enum:
+        - FINISHED
+        - RELEASING
+        - NOT_YET
+        in: query
+        name: status
+        type: string
+      - description: season
+        enum:
+        - WINTER
+        - SPRING
+        - SUMMER
+        - FALL
+        in: query
+        name: season
+        type: string
+      - description: season year
+        in: query
+        name: season_year
+        type: integer
+      - description: start mean
+        in: query
+        name: start_mean
+        type: number
+      - description: end mean
+        in: query
+        name: end_mean
+        type: number
+      - default: RANK
+        description: sort
+        enum:
+        - ID
+        - -ID
+        - TITLE
+        - -TITLE
+        - START_DATE
+        - -START_DATE
+        - MEAN
+        - -MEAN
+        - RANK
+        - -RANK
+        - POPULARITY
+        - -POPULARITY
+        - MEMBER
+        - -MEMBER
+        - VOTER
+        - -VOTER
+        in: query
+        name: sort
+        type: string
+      - default: 1
+        description: page
+        in: query
+        name: page
+        type: integer
+      - default: 20
+        description: limit
+        in: query
+        name: limit
+        type: integer
+      produces:
+      - application/json
+      responses:
+        "200":
+          description: OK
+          schema:
+            allOf:
+            - $ref: '#/definitions/utils.Response'
+            - properties:
+                data:
+                  items:
+                    $ref: '#/definitions/service.Anime'
+                  type: array
+                meta:
+                  $ref: '#/definitions/service.Pagination'
+              type: object
+        "400":
+          description: Bad Request
+          schema:
+            $ref: '#/definitions/utils.Response'
+        "500":
+          description: Internal Server Error
+          schema:
+            $ref: '#/definitions/utils.Response'
+      summary: Get anime list.
+      tags:
+      - Anime
   /anime/{animeID}:
     get:
       parameters:
